<resources>
    <string name="app_name">iRecorder</string>
    <string name="title_activity_start">StartActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="mainActivity_head_text">iRecorder</string>
    <string name="mainActivity_body_multiChoose_button_text">多选</string>
    <string name="mainActivity_body_antiChoose_button_text">反选</string>
    <string name="mainActivity_body_del_button_text">结束任务</string>
    <string name="detailActivity_head_textView_text">详细信息</string>
    <string name="E_abstract">摘要</string>
    <string name="more">更多...</string>
    <string name="data">数据</string>
    <string name="total">总量</string>
    <string name="totalSpeed">整体速率</string>
    <string name="timeSpeed">瞬时速率</string>
    <string name="addTask">添加任务</string>
    <string name="add">添加</string>
    <string name="view">播放</string>
    <string name="favo">收藏</string>
    <string name="like">点赞</string>
    <string name="coin">投币</string>
    <string name="commentary">评论</string>
    <string name="share">转发</string>
    <string name="configActivity_head_textView_text">设置</string>
    <string name="hour">h</string>
    <string name="minute">min</string>
    <string name="day">d</string>
    <string name="average_speed_unit">整体速率单位</string>
    <string name="current_speed_unit">瞬时速率单位</string>
</resources>