<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ConfigActivity">

    <RelativeLayout
        android:id="@+id/detailActivity_head"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/mainColor">

        <TextView
            android:id="@+id/configActivity_head_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/configActivity_head_textView_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

        <View
            android:id="@+id/detailActivity_head_back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20sp"
            android:background="@mipmap/appendactivity_head_back" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <RadioGroup
                android:id="@+id/configActivity_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/config_box"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_speed_unit"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/configActivity_current_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/minute"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/configActivity_current_h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/configActivity_current_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day"
                    android:textSize="18sp" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/configActivity_average"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/config_box"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/average_speed_unit"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/configActivity_average_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/minute"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/configActivity_average_h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/configActivity_average_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day"
                    android:textSize="18sp" />

            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</LinearLayout>